--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,55 @@
   outline: none;
   cursor: pointer;
 }
+
+.upload-button-green{
+  border: 1px solid green;
+  background-color: #b9f5c8;
+  color: black;
+  width:300px;
+  height:150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.upload-button-blue{
+  border: 1px solid #093de7;
+  background-color: #73dae7;
+  color: black;
+  width:300px;
+  height:150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.upload-button-blue:hover {
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  width:300px;
+  height:150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.upload-button-green:hover {
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  width:300px;
+  height:150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.transparent-color{
+  color: rgba(0, 0, 0, .15);
+}
